create balance to user, configuration a documentation and test
