# app/Http/Controllers/HomeController.php
@@ -1,22 +1,0 @@
-<?php
-
-namespace App\Http\Controllers;
-
-use Illuminate\Http\Request;
-
-class HomeController extends Controller
-{
-    /**
-     * @OA\Info(title="My First API", version="0.1")
-     */
-
-    /**
-     * @OA\Get(
-     *     path="/api/resource.json",
-     *     @OA\Response(response="200", description="An example resource")
-     * )
-     */
-    public function index()
-    {
-    }
-}
