# app/Models/User.php
@@ -2,13 +2,25 @@
 
 namespace App\Models;
 
-use Illuminate\Contracts\Auth\MustVerifyEmail;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
 
 class User extends Authenticatable
 {
+
+    /**
+     * @OA\Schema(
+     *     schema="user_resource",
+     *     description="The default resource for an User",
+     *     type="object",
+     *     title="User",
+     *     @OA\Property(property="id", type="int64", description="ID", example="1"),
+     *     @OA\Property(property="name", type="string", description="Name"),
+     *     @OA\Property(property="email", type="string", description="Email", example="anakin@jediorder.org"),
+     *     @OA\Property(property="cpf_cnpj", type="string"),
+     * )
+     */
     use HasFactory, Notifiable;
 
     /**
@@ -20,6 +32,7 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'cpf_cnpj'
     ];
 
     /**
@@ -40,4 +53,41 @@ class User extends Authenticatable
     protected $casts = [
         'email_verified_at' => 'datetime',
     ];
+
+    public function balances()
+    {
+        return $this->hasMany(Balance::class);
+    }
+
+    public function transctionsPayer()
+    {
+        return $this->hasMany(Transaction::class, 'payer', 'id');
+    }
+
+    public function transctionsPayee()
+    {
+        return $this->hasMany(Transaction::class, 'payee', 'id');
+    }
+
+    public function getBalanceAttribute(): float
+    {
+        $balance = $this->balances->reduce(function ($carry, $value) {
+            $signal = $value->type === 'payment' ? -1 : 1;
+            return $carry + ($signal * $value->value);
+        });
+        $balanceTransctionsPayer = $this->transctionsPayer->reduce(function ($carry, $value) {
+                return $carry + ($value->value);
+            }) ?? 0;
+        $balancetransctionsPayee = $this->transctionsPayee->reduce(function ($carry, $value) {
+                return $carry + ($value->value);
+            }) ?? 0;
+        $finalBalance = $balance + $balancetransctionsPayee + (-1 * $balanceTransctionsPayer);
+        return $finalBalance;
+    }
+
+    public function getTypeAttribute(): string
+    {
+        return strlen($this->cpf_cnpj) == 14 ? 'personal' : 'business';
+    }
+
 }
